--- a/wikipedia-copy-page-mutants.html
+++ b/wikipedia-copy-page-mutants.html
@@ -11,7 +11,7 @@
 <body>
   <aside class="float-left">
     <a href="https://en.wikipedia.org/wiki/Main_Page" target="_self">
-      <img src="https://i.imgur.com/8MIPzI1.jpg" alt="logo picture">
+      <img src="https://i.imgur.com/8MIPzI1.jpg" alt="logo picture" class="float-right">
     </a>
     <nav class="page-nav">
       <section class="main-nav">
@@ -55,7 +55,7 @@
       </ul>
     </section>
     <section class="languages">
-      <h6>Languages</h6>
+      <h6>Languages<span id="settingsSymbol" class="float-right"><a href="#" title="Language settings">&#9881;</a></span></h6>
       <ul>
         <li><a href="https://es.wikipedia.org/wiki/Mutantes_comunistas_del_espacio_exterior" target="_self" title="Mutantes comunistas del espacio exterior - Spanish">Español</a></li>
       </ul> 
