--- a/wikipedia-copy-page-mutants.html
+++ b/wikipedia-copy-page-mutants.html
@@ -63,16 +63,17 @@
     <a href="https://www.wikidata.org/wiki/Q5154312#sitelinks-wikipedia" class="edit-links" title="Edit interlanguages links">Edit links</a>
     </nav>
   </aside>
-  <main class="border float-right">
+  
     <header>
-    <ul>
+    <ul class="header-list">
       <li>Not logged in</li>
-      <li><a href="">Talk</a></li>
-      <li><a href="">Contributions</a></li>
-      <li><a href="">Create account</a></li>
-      <li><a href="">Log in</a></li>
+      <li><a href="https://en.wikipedia.org/wiki/User_talk:89.137.7.229" title="Discussion about edits from this IP address [alt-shift-n]">Talk</a></li>
+      <li><a href="https://en.wikipedia.org/wiki/Special:Contributions/89.137.7.229" title="A list of edits made from this IP [alt-shift-y]">Contributions</a></li>
+      <li><a href="https://en.wikipedia.org/w/index.php?title=Special:CreateAccount&returnto=Communist+Mutants+from+Space" title="You are encouraged to create an account and log in; however, it is not mandatory">Create account</a></li>
+      <li><a href="https://en.wikipedia.org/w/index.php?title=Special:UserLogin&returnto=Communist+Mutants+from+Space" title="You're encouraged to log in; however it's not mandatory. [alt-shift-o]">Log in</a></li>
     </ul>
   </header>
+  <main class="border float-right">
   <section>
     <nav class="article-nav">
       <ul class="float-left">
@@ -190,7 +191,8 @@
       </ul>
     </article>
   </section>
-  <footer>
+ </main> 
+  <footer class="float-right">
     <p><small>This page was last edited on 21 October 2020, at 18:01 (UTC).</small></p>
     <p><smaall>Text is available under the Creative Commons Attribution-ShareAlike License; additional terms may apply. By using this site, you agree to the Terms of Use and Privacy Policy. Wikipedia® is a registered trademark of the Wikimedia Foundation, Inc., a non-profit organization.</smaall></p>
     <ul>
@@ -206,7 +208,7 @@
     <img src="" alt="wikimedia project">
     <img src="" alt="powered by MediaWiki">
   </footer>
-  </main>
+  
 </body>
 </html>
 
