--- a/wikipedia-copy-page-mutants.html
+++ b/wikipedia-copy-page-mutants.html
@@ -63,7 +63,6 @@
     <a href="https://www.wikidata.org/wiki/Q5154312#sitelinks-wikipedia" class="edit-links" title="Edit interlanguages links">Edit links</a>
     </nav>
   </aside>
-  
     <header>
     <ul class="header-list">
       <li>Not logged in</li>
@@ -73,27 +72,25 @@
       <li><a href="https://en.wikipedia.org/w/index.php?title=Special:UserLogin&returnto=Communist+Mutants+from+Space" title="You're encouraged to log in; however it's not mandatory. [alt-shift-o]">Log in</a></li>
     </ul>
   </header>
-  <main class="border float-right">
-  <section>
+  <main class="border float-right" id="main">
     <nav class="article-nav">
       <ul class="float-left">
         <li><a href="">Article</a></li>
         <li><a href="">Talk</a></li>
       </ul>
       <div class="search-bar float-right">
-      <input type="text" placeholder="Search Wikipedia">
-    </div>
+        <input type="text" placeholder="Search Wikipedia">
+      </div>
       <ul class="float-right">
         <li><a href="">Read</a></li>
         <li><a href="">Edit</a></li>
         <li><a href="">View history</a></li>
       </ul>
     </nav>
-    
-    
+    <section>
     <div class="page-title">
       <h1>Communist Mutants from Space</h1>
-      <h1>From Wikipedia, the free encyclopedia</h1>
+      <h3>From Wikipedia, the free encyclopedia</h3>
     </div>
     <article class="cover border float-right">
       <h5>Communist Mutants from Space</h5>
@@ -146,7 +143,7 @@
         <figcaption>Destroy the Mother Creature while avoiding mutants and their bombs.</figcaption>
       </figure>
       <p>The player starts off with three reserve cannons. The object is to destroy the mutants aliens and, most importantly, the Mother Creature. The mutants hatch from moving eggs at the top of the screen. Because the Mother Creature replenishes eggs when they hatch or are destroyed, it must be defeated before the player can advance to the next wave. If a mutant or a bomb thrown by a mutant comes into contact with the cannon, the cannon will be destroyed and a reserve must be called up. A new cannon is awarded on every other wave.</p>
-      <h3>Game options</h3>
+      <h4>Game options</h4>
       <p>An in-game menu allows a variety of gameplay changes. The player may toggle the shield option on or off. If activated, "shield" mode allowed a player to press down on the joystick to become invincible for a short period (only one shield was allotted per level). "Time warp" allows the player to press up on the joystick to temporarily slow the enemies. The type of shot fired can be changed by activating the "penetrating fire" option (which enhances the beam fired so that it can hit two mutants rather than one) and/or the "guided fire" option (which causes the beam to be moved with the joystick rather than firing in a straight line).</p>
       <p>The menu also allows for multiple players (up to four) to play. Players one and three share the first joystick while players two and four share the second.</p>
     </article>
