--- a/wikipedia-copy-page-mutants.html
+++ b/wikipedia-copy-page-mutants.html
@@ -100,32 +100,32 @@
       </figure>
       <table>
         <tr>
-          <td>Developer(s)</td>
-          <td>Starpath</td>
+          <td><a href="https://en.wikipedia.org/wiki/Video_game_developer" title="A video game developer is a software developer specializing in video game development – the process and related disciplines of creating video games.">Developer(s)</a></td>
+          <td><a href="https://en.wikipedia.org/wiki/Video_game_publisher" title="Starpath was a U.S. company known for creating the Starpath Supercharger in August 1982.">Starpath</a></td>
         </tr>
         <tr>
-          <td>Publisher(s)</td>
-          <td>Starpath</td>
+          <td><a href="https://en.wikipedia.org/wiki/Video_game_publisher">Publisher(s)</a></td>
+          <td><a href="https://en.wikipedia.org/wiki/Video_game_publisher" title="Starpath was a U.S. company known for creating the Starpath Supercharger in August 1982.">Starpath</a></td>
         </tr>
         <tr>
-          <td>Programmer(s)</td>
-          <td>Stephen H. Landrum</td>
+          <td><a href="https://en.wikipedia.org/wiki/Video_game_programmer">Programmer(s)</a></td>
+          <td>Stephen H. Landrum<a href="#"><sup>[1]</sup></a></td>
         </tr>
         <tr>
-          <td>Platform(s)</td>
-          <td>Atari 2600</td>
+          <td><a href="https://en.wikipedia.org/wiki/Computing_platform">Platform(s)</a></td>
+          <td><a href="https://en.wikipedia.org/wiki/Atari_2600">Atari 2600</a></td>
         </tr>
         <tr>
           <td>Release</td>
-          <td>NA: 1982</td>
+          <td><a href="https://en.wikipedia.org/wiki/North_America">NA</a>: 1982</td>
         </tr>
         <tr>
-          <td>Genre(s)</td>
-          <td>Fixed shooter</td>
+          <td><a href="https://en.wikipedia.org/wiki/Video_game_genre">Genre(s)</a></td>
+          <td><a href="https://en.wikipedia.org/wiki/Shoot_%27em_up#Fixed_shooters">Fixed shooter</a></td>
         </tr>
         <tr>
           <td>Mode(s)</td>
-          <td>Single-player</td>
+          <td><a href="https://en.wikipedia.org/wiki/Single-player_video_game">Single-player</a></td>
         </tr>
       </table>
     </article>
@@ -205,7 +205,6 @@
     <img src="" alt="wikimedia project">
     <img src="" alt="powered by MediaWiki">
   </footer>
-  
 </body>
 </html>
 
