--- a/wikipedia-copy-page-mutants.html
+++ b/wikipedia-copy-page-mutants.html
@@ -89,11 +89,11 @@
     </nav>
     <section>
     <div class="page-title">
-      <h1>Communist Mutants from Space</h1>
+      <h1 class="italic">Communist Mutants from Space</h1>
       <h3>From Wikipedia, the free encyclopedia</h3>
     </div>
     <article class="cover border float-right">
-      <h5>Communist Mutants from Space</h5>
+      <h5 class="italic bold">Communist Mutants from Space</h5>
       <figure>
         <img src="https://upload.wikimedia.org/wikipedia/en/8/85/Communist_Mutants_from_Space_cover.jpg" alt="Cover of video game Communist Mutants from Space for the Starpath Supercharger">
         <figcaption>Cover art</figcaption>
@@ -130,29 +130,45 @@
       </table>
     </article>
     <article class="introduction">
-      <p>Communist Mutants from Space is a fixed shooter video game programmed by Stephen H. Landrum for the Atari 2600 with the Starpath Supercharger cassette accessory. It was published in 1982 by Starpath (formerly Arcadia).[2] The game is similar to Galaxian,[3] adding a variety of gameplay-changing options.</p>
+      <p><span class="italic bold">Communist Mutants from Space</span> is a <a href="https://en.wikipedia.org/wiki/Shoot_%27em_up#Fixed_shooters">fixed shooter</a> video game programmed by Stephen H. Landrum for the <a href="https://en.wikipedia.org/wiki/Atari_2600">Atari 2600</a> with the <a href="https://en.wikipedia.org/wiki/Starpath_Supercharger">Starpath Supercharger</a> cassette accessory. It was published in 1982 by <a href="https://en.wikipedia.org/wiki/Starpath">Starpath</a> (formerly Arcadia).<a href="https://en.wikipedia.org/wiki/Starpath"><sup>[2]</sup></a> The game is similar to <a href="https://en.wikipedia.org/wiki/Galaxian" class="italic">Galaxian</a>,<sup><a href="https://en.wikipedia.org/wiki/Communist_Mutants_from_Space#cite_note-atimes-3">[3]</a></sup> adding a variety of gameplay-changing options.</p>
     </article>
+    <div class="contents-box border">
+      <h3 class="bold">Contents [<a href="#">hide</a>]</h3>
+      <ol>
+        <li><a href="https://en.wikipedia.org/wiki/Communist_Mutants_from_Space#Plot">1 Plot</a></li>
+        <li>
+          <a href="https://en.wikipedia.org/wiki/Communist_Mutants_from_Space#Gameplay">2 Gameplay</a>
+          <ul class="indent">
+            <li><a href="https://en.wikipedia.org/wiki/Communist_Mutants_from_Space#Game_options">2.1 Game options</a></li>
+          </ul>
+        </li>
+        <li><a href="https://en.wikipedia.org/wiki/Communist_Mutants_from_Space#Easter_egg">3 Easter egg</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/Communist_Mutants_from_Space#References">4 References</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/Communist_Mutants_from_Space#Further_reading">5 Further reading</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/Communist_Mutants_from_Space#External_links">6 External links</a></li>
+      </ol>
+    </div>
     <article class="plot">
-      <h2>Plot</h2>
-      <p>Aliens from the communist planet of Rooskee are invading peaceful, democratic planets and turning their inhabitants into "Communist Mutants." The communist mutant armies are controlled by the Mother Creature, a strange alien who has gone mad due to irradiated vodka.[4]</p>
+      <h2>Plot <small>[ <a href="https://en.wikipedia.org/w/index.php?title=Communist_Mutants_from_Space&action=edit&section=1">edit</a> ]</small></h2>
+      <p>Aliens from the <a href="https://en.wikipedia.org/wiki/Communism">communist</a> planet of Rooskee are invading peaceful, democratic planets and turning their inhabitants into "Communist Mutants." The communist mutant armies are controlled by the Mother Creature, a strange alien who has gone mad due to irradiated <a href="https://en.wikipedia.org/wiki/Vodka">vodka</a>.<sup><a href="https://en.wikipedia.org/wiki/Communist_Mutants_from_Space#cite_note-manual-4">[4]</a></sup></p>
     </article>
     <article class="gameplay">
-      <h2>Gameplay</h2>
+      <h2>Gameplay <small>[ <a href="https://en.wikipedia.org/w/index.php?title=Communist_Mutants_from_Space&action=edit&section=2">edit</a> ]</small></h2>
       <figure class="border">
         <img src="https://upload.wikimedia.org/wikipedia/en/f/f2/Commiemutants.png" alt="Screenshot of Communist Mutants from Space for the Atari 2600">
         <figcaption>Destroy the Mother Creature while avoiding mutants and their bombs.</figcaption>
       </figure>
       <p>The player starts off with three reserve cannons. The object is to destroy the mutants aliens and, most importantly, the Mother Creature. The mutants hatch from moving eggs at the top of the screen. Because the Mother Creature replenishes eggs when they hatch or are destroyed, it must be defeated before the player can advance to the next wave. If a mutant or a bomb thrown by a mutant comes into contact with the cannon, the cannon will be destroyed and a reserve must be called up. A new cannon is awarded on every other wave.</p>
-      <h4>Game options</h4>
+      <h4 class="bold">Game options <small>[ <a href="https://en.wikipedia.org/w/index.php?title=Communist_Mutants_from_Space&action=edit&section=2">edit</a> ]</small></h4>
       <p>An in-game menu allows a variety of gameplay changes. The player may toggle the shield option on or off. If activated, "shield" mode allowed a player to press down on the joystick to become invincible for a short period (only one shield was allotted per level). "Time warp" allows the player to press up on the joystick to temporarily slow the enemies. The type of shot fired can be changed by activating the "penetrating fire" option (which enhances the beam fired so that it can hit two mutants rather than one) and/or the "guided fire" option (which causes the beam to be moved with the joystick rather than firing in a straight line).</p>
       <p>The menu also allows for multiple players (up to four) to play. Players one and three share the first joystick while players two and four share the second.</p>
     </article>
     <article class="easter-egg">
-      <h2>Easter egg</h2>
+      <h2>Easter egg <small>[ <a href="https://en.wikipedia.org/w/index.php?title=Communist_Mutants_from_Space&action=edit&section=2">edit</a> ]</small></h2>
       <p>Holding fire during power-on of the Atari 2600 causes the "HI" on the high scores screen to change to "SHL", the initials of programmer Stephen H. Landrum.[5]</p>
     </article>
     <article class="references">
-      <h2>References</h2>
+      <h2>References <small>[ <a href="https://en.wikipedia.org/w/index.php?title=Communist_Mutants_from_Space&action=edit&section=2">edit</a> ]</small></h2>
       <ol>
         <li>Hague, James. "The Giant List of Classic Game Programmers"</li>
         <li> I break for Arcadians:Entertainment abounds in a gaggle of games, Page 26, InfoWorld, 27 Jun 1983,</li>
@@ -162,13 +178,13 @@
       </ol>
     </article>
     <article class="further-reading">
-      <h2>Further reading</h2>
+      <h2>Further reading <small>[ <a href="https://en.wikipedia.org/w/index.php?title=Communist_Mutants_from_Space&action=edit&section=2">edit</a> ]</small></h2>
       <ul>
         <li>TV Gamer, March 1984, p. 41</li>
       </ul>
     </article>
     <article class="external-links">
-      <h2>External links</h2>
+      <h2>External links <small>[ <a href="https://en.wikipedia.org/w/index.php?title=Communist_Mutants_from_Space&action=edit&section=2">edit</a> ]</small></h2>
       <ul>
         <li>Communist Mutants from Space at Atari Mania</li>
       </ul>
