--- a/wikipedia-copy-page-mutants.html
+++ b/wikipedia-copy-page-mutants.html
@@ -109,7 +109,7 @@
         </tr>
         <tr>
           <td><a href="https://en.wikipedia.org/wiki/Video_game_programmer">Programmer(s)</a></td>
-          <td>Stephen H. Landrum<a href="#"><sup>[1]</sup></a></td>
+          <td>Stephen H. Landrum<a href="#"><sup id="ref1">[1]</sup></a></td>
         </tr>
         <tr>
           <td><a href="https://en.wikipedia.org/wiki/Computing_platform">Platform(s)</a></td>
@@ -130,7 +130,7 @@
       </table>
     </article>
     <article class="introduction">
-      <p><span class="italic bold">Communist Mutants from Space</span> is a <a href="https://en.wikipedia.org/wiki/Shoot_%27em_up#Fixed_shooters">fixed shooter</a> video game programmed by Stephen H. Landrum for the <a href="https://en.wikipedia.org/wiki/Atari_2600">Atari 2600</a> with the <a href="https://en.wikipedia.org/wiki/Starpath_Supercharger">Starpath Supercharger</a> cassette accessory. It was published in 1982 by <a href="https://en.wikipedia.org/wiki/Starpath">Starpath</a> (formerly Arcadia).<a href="https://en.wikipedia.org/wiki/Starpath"><sup>[2]</sup></a> The game is similar to <a href="https://en.wikipedia.org/wiki/Galaxian" class="italic">Galaxian</a>,<sup><a href="https://en.wikipedia.org/wiki/Communist_Mutants_from_Space#cite_note-atimes-3">[3]</a></sup> adding a variety of gameplay-changing options.</p>
+      <p><span class="italic bold">Communist Mutants from Space</span> is a <a href="https://en.wikipedia.org/wiki/Shoot_%27em_up#Fixed_shooters">fixed shooter</a> video game programmed by Stephen H. Landrum for the <a href="https://en.wikipedia.org/wiki/Atari_2600">Atari 2600</a> with the <a href="https://en.wikipedia.org/wiki/Starpath_Supercharger">Starpath Supercharger</a> cassette accessory. It was published in 1982 by <a href="https://en.wikipedia.org/wiki/Starpath">Starpath</a> (formerly Arcadia).<a href="https://en.wikipedia.org/wiki/Starpath"><sup id="ref2">[2]</sup></a> The game is similar to <a href="https://en.wikipedia.org/wiki/Galaxian" class="italic">Galaxian</a>,<a href="https://en.wikipedia.org/wiki/Communist_Mutants_from_Space#cite_note-atimes-3"><sup id="ref3">[3]</sup></a> adding a variety of gameplay-changing options.</p>
     </article>
     <div class="contents-box border">
       <h3 class="bold">Contents [<a href="#">hide</a>]</h3>
@@ -150,12 +150,12 @@
     </div>
     <article class="plot">
       <h2>Plot <small>[ <a href="https://en.wikipedia.org/w/index.php?title=Communist_Mutants_from_Space&action=edit&section=1">edit</a> ]</small></h2>
-      <p>Aliens from the <a href="https://en.wikipedia.org/wiki/Communism">communist</a> planet of Rooskee are invading peaceful, democratic planets and turning their inhabitants into "Communist Mutants." The communist mutant armies are controlled by the Mother Creature, a strange alien who has gone mad due to irradiated <a href="https://en.wikipedia.org/wiki/Vodka">vodka</a>.<sup><a href="https://en.wikipedia.org/wiki/Communist_Mutants_from_Space#cite_note-manual-4">[4]</a></sup></p>
+      <p>Aliens from the <a href="https://en.wikipedia.org/wiki/Communism">communist</a> planet of Rooskee are invading peaceful, democratic planets and turning their inhabitants into "Communist Mutants." The communist mutant armies are controlled by the Mother Creature, a strange alien who has gone mad due to irradiated <a href="https://en.wikipedia.org/wiki/Vodka">vodka</a>.<sup id="ref4"><a href="https://en.wikipedia.org/wiki/Communist_Mutants_from_Space#cite_note-manual-4">[4]</a></sup></p>
     </article>
     <article class="gameplay">
       <h2>Gameplay <small>[ <a href="https://en.wikipedia.org/w/index.php?title=Communist_Mutants_from_Space&action=edit&section=2">edit</a> ]</small></h2>
       <figure class="border">
-        <img src="https://upload.wikimedia.org/wikipedia/en/f/f2/Commiemutants.png" alt="Screenshot of Communist Mutants from Space for the Atari 2600">
+        <a href="https://en.wikipedia.org/wiki/File:Commiemutants.png"><img src="https://upload.wikimedia.org/wikipedia/en/f/f2/Commiemutants.png" alt="Screenshot of Communist Mutants from Space for the Atari 2600"></a>
         <figcaption>Destroy the Mother Creature while avoiding mutants and their bombs.</figcaption>
       </figure>
       <p>The player starts off with three reserve cannons. The object is to destroy the mutants aliens and, most importantly, the Mother Creature. The mutants hatch from moving eggs at the top of the screen. Because the Mother Creature replenishes eggs when they hatch or are destroyed, it must be defeated before the player can advance to the next wave. If a mutant or a bomb thrown by a mutant comes into contact with the cannon, the cannon will be destroyed and a reserve must be called up. A new cannon is awarded on every other wave.</p>
@@ -165,32 +165,32 @@
     </article>
     <article class="easter-egg">
       <h2>Easter egg <small>[ <a href="https://en.wikipedia.org/w/index.php?title=Communist_Mutants_from_Space&action=edit&section=2">edit</a> ]</small></h2>
-      <p>Holding fire during power-on of the Atari 2600 causes the "HI" on the high scores screen to change to "SHL", the initials of programmer Stephen H. Landrum.[5]</p>
+      <p>Holding fire during power-on of the Atari 2600 causes the "HI" on the high scores screen to change to "SHL", the initials of programmer Stephen H. Landrum.<a href="https://en.wikipedia.org/wiki/Communist_Mutants_from_Space#cite_note-Chris_Federico-5"><sup id="ref5">[5]</sup></a></p>
     </article>
     <article class="references">
       <h2>References <small>[ <a href="https://en.wikipedia.org/w/index.php?title=Communist_Mutants_from_Space&action=edit&section=2">edit</a> ]</small></h2>
       <ol>
-        <li>Hague, James. "The Giant List of Classic Game Programmers"</li>
-        <li> I break for Arcadians:Entertainment abounds in a gaggle of games, Page 26, InfoWorld, 27 Jun 1983,</li>
-        <li> Brundage, Darryl (June 23, 2005). "Communist Mutants from Space". The Atari Times.</li>
-        <li> "Communist Mutants from Space manual". archive.org. Starpath. 1982.</li>
-        <li>Federico, Chris. "The Complete 2600 Easter Egg Archive". Orphaned Computers & Game Systems. Retrieved 2007-12-28.[dead link]</li>
+        <li><a href="#ref1">^</a> Hague, James. <a href="https://dadgum.com/giantlist/">"The Giant List of Classic Game Programmers"</a></li>
+        <li><a href="#ref2">^</a> <a href="https://books.google.com.au/books?id=yy8EAAAAMBAJ&lpg=PA26&dq=Supercharger%20starpath&pg=PA26#v=onepage&q=Supercharger%20starpath&f=false">I break for Arcadians:Entertainment abounds in a gaggle of games</a>, Page 26, InfoWorld, 27 Jun 1983,</li>
+        <li><a href="#ref3">^</a> Brundage, Darryl (June 23, 2005). <a href="http://ataritimes.com/index.php?ArticleIDX=475">Communist Mutants from Space"</a>. <span class="italic">The Atari Times.</span></li>
+        <li><a href="#ref4">^</a> <a href="https://archive.org/details/Communist_Mutants_From_Space_1982_Starpath">Communist Mutants from Space manual"</a>. <span class="italic">archive.org.</span> Starpath. 1982.</li>
+        <li><a href="#ref5">^</a> Federico, Chris. <a href="http://www.geocities.com/SiliconValley/Server/2990/ocgs/issue8/eggstron.html">The Complete 2600 Easter Egg Archive"</a>. Orphaned Computers & Game Systems. Retrieved 2007-12-28.<sup class="italic"><a href="https://en.wikipedia.org/wiki/Wikipedia:Link_rot">[dead link]</a></sup></li>
       </ol>
     </article>
     <article class="further-reading">
       <h2>Further reading <small>[ <a href="https://en.wikipedia.org/w/index.php?title=Communist_Mutants_from_Space&action=edit&section=2">edit</a> ]</small></h2>
       <ul>
-        <li>TV Gamer, March 1984, p. 41</li>
+        <li><a href="https://archive.org/details/TV_Gamer_1984-03_Boytonbrook_GB/page/n38/mode/1up">TV Gamer, March 1984, p. 41</a></li>
       </ul>
     </article>
     <article class="external-links">
       <h2>External links <small>[ <a href="https://en.wikipedia.org/w/index.php?title=Communist_Mutants_from_Space&action=edit&section=2">edit</a> ]</small></h2>
       <ul>
-        <li>Communist Mutants from Space at Atari Mania</li>
+        <li><a class="italic" href="http://www.atarimania.com/game-atari-2600-vcs-communist-mutants-from-space_13667.html">Communist Mutants from Space</a> at Atari Mania</li>
       </ul>
     </article>
     <article class="categories border">
-      <h5><a href="">Categories</a></h5>
+      <h5><a href="">Categories: </a></h5>
       <ul>
         <li><a href="">1982 video games</a></li>
         <li><a href="">Alien invasions in video games</a></li>
