--- a/wikipedia-copy-page-mutants.html
+++ b/wikipedia-copy-page-mutants.html
@@ -75,19 +75,14 @@
   <main class="border float-right" id="main">
     <nav class="article-nav">
       <ul class="float-left">
-        <li><a href="">Article</a></li>
-        <li><a href="">Talk</a></li>
+        <li><a href="#">Article</a></li><li><a href="#">Talk</a></li>
       </ul>
       <div class="search-bar float-right">
-        <input type="text" placeholder="Search Wikipedia">
+        <input type="text" placeholder="Search Wikipedia      &#128270;">
       </div>
       <ul class="float-right">
-        <li><a href="">Read</a></li>
-        <li><a href="">Edit</a></li>
-        <li><a href="">View history</a></li>
-      </ul>
-    </nav>
-    <section>
+        <li><a href="#">Read</a></li><li><a href="#">Edit</a></li><li><a href="#">View history</a></li>
+      </ul></nav><section>
     <div class="page-title">
       <h1 class="italic">Communist Mutants from Space</h1>
       <h3>From Wikipedia, the free encyclopedia</h3>
@@ -207,19 +202,21 @@
  </main> 
   <footer class="float-right">
     <p><small>This page was last edited on 21 October 2020, at 18:01 (UTC).</small></p>
-    <p><smaall>Text is available under the Creative Commons Attribution-ShareAlike License; additional terms may apply. By using this site, you agree to the Terms of Use and Privacy Policy. Wikipedia® is a registered trademark of the Wikimedia Foundation, Inc., a non-profit organization.</smaall></p>
+    <p><small>Text is available under the <a href="https://en.wikipedia.org/wiki/Wikipedia:Text_of_Creative_Commons_Attribution-ShareAlike_3.0_Unported_License">Creative Commons Attribution-ShareAlike License</a>; additional terms may apply. By using this site, you agree to the <a href="https://foundation.wikimedia.org/wiki/Terms_of_Use/en">Terms of Use</a> and <a href="https://foundation.wikimedia.org/wiki/Privacy_policy">Privacy Policy</a>. Wikipedia® is a registered trademark of the <a href="https://wikimediafoundation.org/">Wikimedia Foundation, Inc.</a>, a non-profit organization.</small></p>
     <ul>
-      <li><a href="">Privacy policy</a></li>
-      <li><a href="">About Wikipedia</a></li>
-      <li><a href="">Disclaimers</a></li>
-      <li><a href="">Contact Wikipedia</a></li>
-      <li><a href="">Mobile view</a></li>
-      <li><a href="">Developers</a></li>
-      <li><a href="">Statistics</a></li>
-      <li><a href="">Cookie statement</a></li>
+      <li><a href="https://foundation.wikimedia.org/wiki/Privacy_policy">Privacy policy</a></li>
+      <li><a href="https://en.wikipedia.org/wiki/Wikipedia:About">About Wikipedia</a></li>
+      <li><a href="https://en.wikipedia.org/wiki/Wikipedia:General_disclaimer">Disclaimers</a></li>
+      <li><a href="https://en.wikipedia.org/wiki/Wikipedia:Contact_us">Contact Wikipedia</a></li>
+      <li><a href="https://en.m.wikipedia.org/wiki/Communist_Mutants_from_Space">Mobile view</a></li>
+      <li><a href="https://www.mediawiki.org/wiki/How_to_contribute">Developers</a></li>
+      <li><a href="https://stats.wikimedia.org/#/en.wikipedia.org">Statistics</a></li>
+      <li><a href="https://foundation.wikimedia.org/wiki/Cookie_statement">Cookie statement</a></li>
     </ul>
-    <img src="" alt="wikimedia project">
-    <img src="" alt="powered by MediaWiki">
+    <div class="bottom-logo float-right">
+      <a href="https://wikimediafoundation.org/"><img src="https://i.imgur.com/SG4tdHl.jpg" alt="wikimedia project" class="border"></a>
+      <a href="https://www.mediawiki.org/wiki/MediaWiki"><img src="https://i.imgur.com/Qng544j.jpg" alt="powered by MediaWiki" class="border"></a>
+    </div>
   </footer>
 </body>
 </html>
